<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">FriendKeeper</string>
    <string name="logo_description">Logo do aplicativo</string>
    <string name="dados_nao_prontos">Os dados não estão prontos ou não existem.</string>
    <string name="login_invalido">Email ou senha inválido</string>
    <string name="usuario_registrado">Usuário registrado com sucesso</string>
    <string name="erro_registro_usuario">Erro ao registrar usuário</string>
    <string name="nome_contato">Nome do contato</string>
    <string name="tel_contato">Telefone do contato</string>
    <string name="night_mode">Modo Noturno</string>
    <string name="idioma">Idioma</string>
    <string name="english">Inglês</string>
    <string name="portuguese">Português</string>
    <string name="spanish">Espanhol</string>
    <string name="french">Francês</string>
    <string name="hint_email_login">Email</string>
    <string name="hint_senha_login">Senha</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_tela_cadastro">Não tem uma conta? Registre-se aqui</string>
    <string name="hint_nome_cadastrar">Nome</string>
    <string name="hint_email_cadastrar">Email</string>
    <string name="hint_senha_cadastrar">Senha</string>
    <string name="txt_button_registrar">Registrar</string>
    <string name="txt_tela_login">Já tem uma conta? Faça login aqui</string>
    <string name="logout">Sair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_ct_name_hint">Nome</string>
    <string name="add_ct_telefone_hint">Telefone</string>
    <string name="add_ct_email_hint">Email</string>
    <string name="add_ct_endereco_hint">Endereço</string>
    <string name="add_ct_data_nasc_hint">Data de Nascimento</string>
    <string name="add_ct_salvar_btn">Salvar Contato</string>
    <string name="add_address_titulo_hint">Título do Endereço</string>
    <string name="add_address_endereco_hint">Endereço</string>
    <string name="add_address_geocodificar_btn">Geocodificar</string>
    <string name="add_address_salvar_btn">Salvar Endereço</string>
    <string name="add_ct_selec_endereco_btn">Selecionar</string>
    <string name="add_ct_add_photo_btn">Adicionar Foto</string>
    <string name="add_ct_photo_contentDescription">Foto do Contato</string>
    <string name="frag_list_ct_btn_add">Adicionar Contato</string>
    <string name="add_ct_add_foto_tirar_foto">Tirar Foto</string>
    <string name="add_ct_add_foto_selecionar_foto">Selecionar da Galeria</string>
    <string name="verif_add_ct_nome_telefone">Nome e Telefone são obrigatórios</string>
    <string name="verif_add_ct_contato_salvo">Contato salvo com sucesso</string>
    <string name="verif_todos_campos">Por favor, preencha todos os campos obrigatórios</string>
    <string name="verif_perm_n_concedidas">Permissões necessárias não concedidas</string>
    <string name="add_foto">Adicionar Foto</string>
    <string name="verif_inserir_endereco">Por favor, insira um endereço</string>
    <string name="verif_endereco_n_encontrado">Endereço não encontrado</string>
    <string name="verif_erro_geocod_endereco">Erro ao geocodificar o endereço</string>
    <string name="perm_necessaria">Permissão Necessária</string>
    <string name="perg_perm_agendar_alarmes_exatos">Este aplicativo precisa da permissão para agendar alarmes exatos. Deseja conceder essa permissão?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="loc_endereco">Localização do Endereço</string>
    <string name="erro_login">Falha ao tentar realizar login</string>
    <string name="config_permissoes">Configurações de Permissões</string>
    <string name="permissao">Permissão</string>
    <string name="permitir">Permitir</string>
    <string name="permission_granted">Permissão Concedida</string>
    <string name="permission_allow">Permitir</string>
    <string name="permission_denied">Permissão negada</string>
    <string name="open_maps">Abrir no Maps</string>
    <string name="delete_contact">Excluir Contato</string>
    <string name="edit_photo">Editar Foto</string>
    <string name="title_activity_contact_info">Contact Info</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_notification">NotificationActivity</string>
</resources>