<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint"
        app:boxStrokeColor="@color/dark_cyan_green"
        app:hintAnimationEnabled="true"
        app:errorEnabled="true"
        app:errorTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddressTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_address_titulo_hint"
            android:padding="15dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint"
        app:boxStrokeColor="@color/dark_cyan_green"
        app:hintAnimationEnabled="true"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_address_endereco_hint"
            android:padding="15dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonGeocode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_address_geocodificar_btn" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <Button
        android:id="@+id/buttonSaveAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_address_salvar_btn" />
</LinearLayout>
